# ppvc

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
ppvc/: ppvc.py
